syntax = "proto3";

package NLogBroker;

option cc_enable_arenas = true;

import "yandex/cloud/priv/validation.proto";
import "ydb/public/api/protos/ydb_operation.proto";

message ExecuteModifyCommandsResponse {
    Ydb.Operations.Operation operation = 1;
}

message ExecuteModifyCommandsResult {
    // Commands are applied in this version of config. Version is the same with operation.Id (in string representation).
    uint64 version = 1;
    repeated string applied_clusters = 2;
    repeated string disabled_clusters = 3;
}

////// ENTITIES
message Entry {
    oneof entry {
        option (yandex.cloud.priv.exactly_one) = true;
        string directory = 1;
        string topic = 2;
        string consumer = 3;
    }
}

message ClusterKey {
    string cluster = 1 [(yandex.cloud.priv.required) = true];
}

message ClusterProperties {
    StringOrDefaultValue balancer = 1;
    BoolOrDefaultValue write_enabled = 2;
    BoolOrDefaultValue apply_changes_enabled = 3;
}

message ClusterAdminProperties {
    StringOrDefaultValue zk_proxy = 1;
    StringOrDefaultValue kikimr_host = 2;
    IntOrDefaultValue kikimr_msgbus_in_flight = 3;
    IntOrDefaultValue kikimr_msgbus_max_msg_size = 4;
    IntOrDefaultValue kikimr_port = 5;

    BoolOrDefaultValue mirroring_enabled = 6;
    IntOrDefaultValue mirroring_max_delay_threshold = 7;
    IntOrDefaultValue mirroring_max_message_lag = 8;
    IntOrDefaultValue mirroring_partitions_per_fetcher = 9;

    IntOrDefaultValue write_speed_capacity = 10;
    IntOrDefaultValue read_speed_capacity = 11;

    IntOrDefaultValue weight = 12;
}

message TopicAdminProperties {
    IntOrDefaultValue max_message_size = 1;
    IntOrDefaultValue max_disk_size = 2;
    IntOrDefaultValue partitions_per_tablet = 3;
    IntOrDefaultValue max_partition_write_speed = 4;
}


message QuotaUsageProperties {
    QuotaUsageDescription directories_count = 1;
    QuotaUsageDescription topics_count = 2;
    QuotaUsageDescription consumers_count = 3;

    QuotaUsageDescription topic_partitions_count_max = 4;
    QuotaUsageDescription topic_partitions_count_sum = 5;
}

message AdminQuotaUsageProperties {
    QuotaUsageDescription clusters_count = 1;
    QuotaUsageDescription accounts_count = 2;

    QuotaUsageDescription account_templates_count = 3;

    QuotaUsageDescription topic_templates_count = 4;
    QuotaUsageDescription consumer_templates_count = 5;
}

message AccountProperties {
    //all account properties can be modified only by admins.

    IntOrDefaultValue topic_partitions_count_max = 1;
    IntOrDefaultValue topic_partitions_count_sum = 2;
    IntOrDefaultValue topics_count = 3;
    IntOrDefaultValue consumers_count = 5;
    IntOrDefaultValue directories_count = 10;

    IntOrDefaultValue max_metadata_per_entry = 11;
    StringOrDefaultValue abc_service = 12;
    IntOrDefaultValue abc_id = 16;
    StringOrDefaultValue responsible = 14;
    StringOrDefaultValue mailing_list = 15;
}

message AccountAdminProperties {
    //all account properties can be modified only by admins.

    IntOrDefaultValue topic_templates_count = 4;
    IntOrDefaultValue consumer_templates_count = 6;
    IntOrDefaultValue clusters_count = 7;
    IntOrDefaultValue accounts_count = 8;
    IntOrDefaultValue account_templates_count = 9;

    IntOrDefaultValue write_speed_notify_threshold = 13;
    BoolOrDefaultValue abc_service_validated = 14;
}


message Path {
    // Full path that describing For example - "account/directory1/directory2/topic".
    string path = 1 [(yandex.cloud.priv.required) = true];
}

message DirectoryProperties {
    StringOrDefaultValue abc_service = 1;
    IntOrDefaultValue abc_id = 8;
    StringOrDefaultValue responsible = 2;
    StringOrDefaultValue mailing_list = 7;
}

message DirectoryAdminProperties {
}


message TopicProperties {
    IntOrDefaultValue partitions_count = 1 [(yandex.cloud.priv.required) = true];
    IntOrDefaultValue retention_period_sec = 2;

    StringOrDefaultValue abc_service = 3;
    IntOrDefaultValue abc_id = 10;

    BoolOrDefaultValue allow_unauthenticated_read = 4;
    BoolOrDefaultValue allow_unauthenticated_write = 5;

    StringOrDefaultValue responsible = 6;
    StringOrDefaultValue mailing_list = 7;

    IntOrDefaultValue supported_format_version = 8;
    StringOrDefaultValue supported_codecs = 9;
}


message ConsumerProperties {
    BoolOrDefaultValue important = 1;

    StringOrDefaultValue abc_service = 4;
    IntOrDefaultValue abc_id = 10;

    StringOrDefaultValue limits_mode = 5; // One of wait | notify .
    StringOrDefaultValue responsible = 6;
    StringOrDefaultValue mailing_list = 7;

    IntOrDefaultValue supported_format_version = 8;
    StringOrDefaultValue supported_codecs = 9;

}
message ConsumerAdminProperties {
    IntOrDefaultValue max_delay_threshold_sec = 2;
    IntOrDefaultValue max_message_lags = 3;

    oneof allowed_read_rule_mode {
        ClusterKey mirror_to_cluster = 4;
        AllOriginal all_original = 5;
    }
    IntOrDefaultValue max_read_rules = 8;
    IntOrDefaultValue max_partitions = 9;
}


// Rule for reading topic by consumer. There could be several rules at once for one topic and/or consumer.
message ReadRule {
    ReadRuleKey read_rule = 1;
    ReadRuleProperties properties = 2;
}

message ReadRuleAdmin {
    ReadRuleKey read_rule = 1;
    ReadRuleProperties properties = 2;
    ReadRuleAdminProperties admin_properties = 3;
}


message ReadRuleKey {
    // Topic or directory with topics.
    Path topic = 1 [(yandex.cloud.priv.required) = true];
    // Consumer.
    Path consumer = 2 [(yandex.cloud.priv.required) = true];
    oneof mode {
        option (yandex.cloud.priv.exactly_one) = true;
        // Read all data in this cluster.
        ClusterKey mirror_to_cluster = 3;
        // Read all data locally.
        AllOriginal all_original = 4;
    }
}

message AllOriginal {
}

message ReadRuleProperties {
}

message ReadRuleAdminProperties {
    // Overrides consumer 'important' flag
    BoolOrDefaultValue important = 1;
    IntOrDefaultValue read_from_time_sec = 2;
}

message IamCredentials {
    string endpoint = 1;
    string service_account_key = 2;
}

message Credentials {
    oneof credentials {
        string oauth_token = 1;
        IamCredentials iam = 3;
    }
}

// Remote mirror rule for mirroring topic from another cluster. There could be one rule at once for pair (topic; cluster).
message RemoteMirrorRule {
    RemoteMirrorRuleKey remote_mirror_rule = 1;
    RemoteMirrorRuleProperties properties = 2;
}

message RemoteMirrorRuleAdmin {
    RemoteMirrorRuleKey remote_mirror_rule = 1;
    RemoteMirrorRuleProperties properties = 2;
    RemoteMirrorRuleAdminProperties admin_properties = 3;
}

message RemoteMirrorRuleKey {
    // Destination topic.
    Path topic = 1 [(yandex.cloud.priv.required) = true];
    // Destination cluster.
    ClusterKey cluster = 2 [(yandex.cloud.priv.required) = true];
}

message RemoteMirrorRuleProperties {
    StringOrDefaultValue src_cluster_endpoint = 1 [(yandex.cloud.priv.required) = true];
    StringOrDefaultValue src_database = 2;
    StringOrDefaultValue src_topic = 3 [(yandex.cloud.priv.required) = true];
    StringOrDefaultValue src_consumer = 4 [(yandex.cloud.priv.required) = true];
    IntOrDefaultValue read_from_time_sec = 5;
    Credentials credentials = 6;
}

message RemoteMirrorRuleAdminProperties {
}

message YtConsumerProperties {
    StringOrDefaultValue binary_path = 1;
    IntOrDefaultValue cluster_ratio_denominator = 2;
    IntOrDefaultValue cluster_ratio_nominator = 3;
    StringOrDefaultValue destination = 4;
    BoolOrDefaultValue enabled = 5;
    StringOrDefaultValue flavor = 6; // One of : ng | ng-steady | ng-steady-logfeller | legacy .
    StringOrDefaultValue format = 7; // One of : raw | raw_lenval | kiwi | tskv .
    StringOrDefaultValue hosts_handle = 8;
    IntOrDefaultValue max_work_time = 9; // In seconds.
    IntOrDefaultValue max_work_time_delta = 10;
    StringOrDefaultValue output_pattern = 11;
    StringOrDefaultValue state_path = 12;
    IntOrDefaultValue threads = 13;
    IntOrDefaultValue timeout = 14;
    StringOrDefaultValue token = 15;
    IntOrDefaultValue total_buffer_limit = 16;

    StringOrDefaultValue push_token = 17;
    StringOrDefaultValue lock_token = 18;
    StringOrDefaultValue merge_token = 19;
}

message DirectoryRateLimitProperties {
    ClusterKey cluster = 2;
    //TODO:add here one_of cluster and "total" message

    // Quota for all activity in this account/directory/topic/consumer/ in bytes per second. In case of account/directory - quota for all nested objects.
    // Write speed quota even for case of shutdown of datacenter.
    IntOrDefaultValue write_speed_per_sec = 3;
    IntOrDefaultValue read_speed_per_sec = 4;

}

message AccountRateLimitProperties {
    DirectoryRateLimitProperties base_rate_limit_properties = 1;
    // User original write quota in dc that is not rolling between datacenters on disabling.
    IntOrDefaultValue static_dc_write_speed_per_sec = 2;
    // User original write quota in dc that is rolling between datacenters on disabling.
    IntOrDefaultValue rolling_dc_write_speed_per_sec = 3;
}

message InheritedDirectoryRateLimit {
    Path path = 1;
    repeated DirectoryRateLimitProperties rate_limits = 2;
}

message TopicRateLimitProperties {
    ClusterKey cluster = 2;
    //TODO:add here one_of cluster and "total" message

    //quota for all activity in this account/directory/topic/consumer/ in bytes per second. In case of account/directory - quota for all nested objects
    IntOrDefaultValue write_speed_per_sec = 3 [(yandex.cloud.priv.required) = true];
}

message ConsumerRateLimitProperties {
    ClusterKey cluster = 2;
    //TODO:add here one_of cluster and "total" message

    //quota for all activity in this account/directory/topic/consumer/ in bytes per second. In case of account/directory - quota for all nested objects
    IntOrDefaultValue read_speed_per_sec = 4 [(yandex.cloud.priv.required) = true];
}

message Metadata {
    string key = 1 [(yandex.cloud.priv.required) = true];
    string value = 2 [(yandex.cloud.priv.required) = true];
}

message Permissions {
    //topic_write|topic_read|consumer_read|consumer_commit|account_read|account_write
    repeated string permission_names = 1 [(yandex.cloud.priv.required) = true];
    //user@staff or 123@tvm or group@group or everyone
    string subject = 2 [(yandex.cloud.priv.required) = true];

    // Subject type and name used only in describe
    // Subject type such as staff, tvm or abc
    string subject_type = 3;
    // Printable subject name
    string subject_name = 4;
}

// In modify methods this message is used for describing each property.
// For setting property fill *OrDefaultValue.user_defined. If one need to reset to defaults - fill *OrDefaultValue.default with 0,false or "".
// If one don't want to change property, then do not touch property at all.
//
// For describe methods filled field shows how this value is happen - from user definition or from defaults

message QuotaUsageDescription {
    oneof variant {
        option (yandex.cloud.priv.exactly_one) = true;
        uint64 user_defined = 1;
        uint64 default = 2;
    }
    uint64 usage = 3;
}

message IntOrDefaultValue {
    oneof variant {
        option (yandex.cloud.priv.exactly_one) = true;
        uint64 user_defined = 1;
        uint64 default = 2;
    }
}

message StringOrDefaultValue {
    oneof variant {
        option (yandex.cloud.priv.exactly_one) = true;
        string user_defined = 1;
        string default = 2;
    }
}

message BoolOrDefaultValue {
    oneof variant {
        option (yandex.cloud.priv.exactly_one) = true;
        bool user_defined = 1;
        bool default = 2;
    }
}

message TopicInstance {
    // Topic instance location cluster
    string target_cluster = 1;
    // If target_cluster != origin_cluster, topic instance is a mirror
    string origin_cluster = 2;
}
