syntax = "proto3";

import "ydb/public/api/protos/ydb_operation.proto";
import "yandex/cloud/priv/validation.proto";
import "logbroker/public/api/protos/common.proto";

package NLogBroker;

option cc_enable_arenas = true;


message ExecuteModifyCommandsRequest {
    Ydb.Operations.OperationParams operation_params = 1;

    repeated SingleModifyRequest actions = 2;
    // Comment is used only for logging.
    string comment = 3;

    string token = 111;
}

message SingleModifyRequest {
    oneof request {
        CreateDirectoryRequest create_directory = 1;
        CreateTopicRequest create_topic = 2;
        CreateConsumerRequest create_consumer = 3;
        CreateReadRuleRequest create_read_rule = 4;
        CreateAccountRequest create_account = 5;
        CreateRemoteMirrorRuleRequest create_remote_mirror_rule = 6;

        UpdateDirectoryRequest update_directory = 10;
        UpdateTopicRequest update_topic = 11;
        UpdateConsumerRequest update_consumer = 12;
        UpdateAccountRequest update_account = 14;
        UpdateRemoteMirrorRuleRequest update_remote_mirror_rule = 15;
        // UpdateReadRule update_read_rule = 13;

        SetDirectoryRateLimitRequest set_directory_rate_limit = 40;
        SetTopicRateLimitRequest set_topic_rate_limit = 41;
        SetConsumerRateLimitRequest set_consumer_rate_limit = 42;
        SetMetadataRequest set_metadata = 60;

        RemoveDirectoryRequest remove_directory = 20;
        RemoveTopicRequest remove_topic = 21;
        RemoveConsumerRequest remove_consumer = 22;
        RemoveReadRuleRequest remove_read_rule = 23;
        RemoveDirectoryRateLimitRequest remove_directory_rate_limit = 50;
        RemoveTopicRateLimitRequest remove_topic_rate_limit = 51;
        RemoveConsumerRateLimitRequest remove_consumer_rate_limit = 52;
        RemoveMetadataRequest remove_metadata = 61;
        RemoveRemoteMirrorRuleRequest remove_remote_mirror_rule = 62;

        GrantPermissionsRequest grant_permissions = 30;
        RevokePermissionsRequest revoke_permissions = 31;
        SetPermissionsRequest set_permissions = 32;
        ChangeOwnerRequest change_owner = 33;

        AddTopicToYtDeliveryRequest add_topic_to_yt_delivery = 70;
        RemoveTopicFromYtDeliveryRequest remove_topic_from_yt_delivery = 71;
    }
}

////// DESCRIBE
message DescribeClusterRequest {
    Ydb.Operations.OperationParams operation_params = 1;

    string name = 2 [(yandex.cloud.priv.required) = true];

    string token = 111;
}

message DescribeClusterResponse {
    Ydb.Operations.Operation operation = 1;
}

message DescribeClusterResult {
    string name = 1;
    ClusterProperties properties = 2;
}


message DescribePathRequest {
    Ydb.Operations.OperationParams operation_params = 1;

    Path path = 2;

    string token = 111;
}

message DescribePathResponse {
    Ydb.Operations.Operation operation = 1;
}

message DescribePathResult {
    Path path = 1;
    oneof result {
        DescribeAccountResult account = 2;
        DescribeDirectoryResult directory = 3;
        DescribeTopicResult topic = 4;
        DescribeConsumerResult consumer = 5;
    }
    uint64 creation_time_ms = 20;
    uint64 modification_time_ms = 21;
    string created_by = 22;
    string modified_by = 23;
}

message DescribeAccountResult {
    string name = 1;
    AccountProperties properties = 2;
    QuotaUsageProperties quota_usage = 8;

    repeated AccountRateLimitProperties account_rate_limits = 11;
    repeated DirectoryRateLimitProperties rate_limits = 3; //deprecated
    repeated Permissions permissions = 4;
    repeated Permissions effective_permissions = 5;

    repeated Metadata metadata = 7;

    bool is_related_to_caller = 9;
    string owner = 10;
}


message DescribeDirectoryResult {
    DirectoryProperties properties = 1;
    repeated DirectoryRateLimitProperties rate_limits = 2;
    repeated InheritedDirectoryRateLimit inherited_rate_limits = 3;
    repeated Permissions permissions = 4;
    repeated Permissions effective_permissions = 5;

    repeated Metadata metadata = 7;

    string owner = 8;
    // Count of immediate directory children
    uint32 children_count = 9;
}

message DescribeTopicResult {
    message Consumer {
        string path = 1;
        // Specific topic instances read by the consumer.
        repeated TopicInstance instances = 2;
    }

    TopicProperties properties = 1;
    TopicAdminProperties admin_properties = 2;

    repeated TopicRateLimitProperties rate_limits = 3;
    repeated InheritedDirectoryRateLimit inherited_rate_limits = 4;
    repeated Permissions permissions = 5;
    repeated Permissions effective_permissions = 6;

    //all read rules that matches this topic
    repeated ReadRule read_rules = 9;

    repeated Metadata metadata = 10;

    string owner = 11;

    repeated TopicInstance instances = 12;
    repeated Consumer consumers = 13;

    // TD Deliveries paths that the topic is added to
    repeated string yt_deliveries = 14;

    // 'true' if current user is allowed to add the topic to a YT delivery
    bool addition_to_yt_delivery_allowed = 15;
    // 'true' if current user is allwed to remove the topic from a YT delivery
    bool removal_from_yt_delivery_allowed = 16;

    //all remote mirror rules that matches this topic
    repeated RemoteMirrorRuleAdmin remote_mirror_rules = 17;
}

message DescribeConsumerResult {
    message Topic {
        string path = 1;
        // Specific topic instances read by the consumer.
        repeated TopicInstance instances = 2;
    }

    ConsumerProperties properties = 1;
    repeated ConsumerRateLimitProperties rate_limits = 2;
    repeated InheritedDirectoryRateLimit inherited_rate_limits = 3;
    repeated Permissions permissions = 4;
    repeated Permissions effective_permissions = 5;

    //all read rules that matches this consumer
    repeated ReadRule read_rules = 7;

    repeated Metadata metadata = 8;

    string owner = 9;
    repeated Topic topics = 10;
}

////// LIST
message ListClustersRequest {
    Ydb.Operations.OperationParams operation_params = 1;

    string token = 111;
}

message ListClustersResponse {
    Ydb.Operations.Operation operation = 1;
}

message ListClustersResult {
    repeated string names = 1;
}

message ListAccountsRequest {
    Ydb.Operations.OperationParams operation_params = 1;

    string token = 111;
}

message ListAccountsResponse {
    Ydb.Operations.Operation operation = 1;
}

message ListAccountsResult {
    repeated string names = 1;
}

message ListDirectoryRequest {
    Ydb.Operations.OperationParams operation_params = 1;

    Path path = 2;

    string token = 111;
}

message ListDirectoryResponse {
    Ydb.Operations.Operation operation = 1;
}

message ListDirectoryResult {
    Path path = 1;
    Entry self = 2;

    repeated Entry children = 3;
}


////// CREATE

message CreateAccountRequest {
    string name = 1 [(yandex.cloud.priv.required) = true];
    string abc_service = 2 [(yandex.cloud.priv.required) = true];
    string responsible = 3 [(yandex.cloud.priv.required) = true];
    uint32 abc_id = 4;
}

message CreateDirectoryRequest {
    Path path = 1;
    DirectoryProperties properties = 2;
}

message CreateTopicRequest {
    Path path = 1;
    TopicProperties properties = 2;
}

message CreateConsumerRequest {
    Path path = 1;
    ConsumerProperties properties = 3;
}

message CreateReadRuleRequest {
    ReadRuleKey read_rule = 1;
    ReadRuleProperties properties = 2;
}

message CreateRemoteMirrorRuleRequest {
    RemoteMirrorRuleKey remote_mirror_rule = 1;
    RemoteMirrorRuleProperties properties = 2;
}

////// UPDATE
message UpdateAccountRequest {
    string name = 1 [(yandex.cloud.priv.required) = true];
    string abc_service = 2;
    string responsible = 3;
    uint32 abc_id = 4;
}

message UpdateDirectoryRequest {
    Path path = 1;
    DirectoryProperties properties = 2;
}

message UpdateTopicRequest {
    Path path = 1;
    TopicProperties properties = 2;
}

message UpdateConsumerRequest {
    Path path = 1;
    ConsumerProperties properties = 2;
}

message UpdateReadRuleRequest {
    ReadRuleKey read_rule = 1;
    ReadRuleProperties properties = 2;
}

message UpdateRemoteMirrorRuleRequest {
    RemoteMirrorRuleKey remote_mirror_rule = 1;
    RemoteMirrorRuleProperties properties = 2;
}

////// SET
message SetDirectoryRateLimitRequest {
    Path path = 1;
    DirectoryRateLimitProperties rate_limit = 2;
}

message SetTopicRateLimitRequest {
    Path path = 1;
    TopicRateLimitProperties rate_limit = 2;
}

message SetConsumerRateLimitRequest {
    Path path = 1;
    ConsumerRateLimitProperties rate_limit = 2;
}

message SetMetadataRequest {
    Path path = 1;
    Metadata metadata = 2;
}

////// REMOVE
message RemoveDirectoryRequest {
    Path path = 1;
}

message RemoveTopicRequest {
    Path path = 1;
}

message RemoveConsumerRequest {
    Path path = 1;
}

message RemoveReadRuleRequest {
    ReadRuleKey read_rule = 1;
}

message RemoveRemoteMirrorRuleRequest {
    RemoteMirrorRuleKey remote_mirror_rule = 1;
}

message RemoveDirectoryRateLimitRequest {
    ClusterKey cluster = 2;
    Path path = 1;
}

message RemoveTopicRateLimitRequest {
    ClusterKey cluster = 2;
    Path path = 1;
}

message RemoveConsumerRateLimitRequest {
    ClusterKey cluster = 2;
    Path path = 1;
}

message RemoveMetadataRequest {
    Path path = 1;
    string key = 2;
}

////// ACCESS CONTROL
message GrantPermissionsRequest {
    Path path = 1;
    repeated Permissions permissions = 2;
}

message RevokePermissionsRequest {
    Path path = 1;
    repeated Permissions permissions = 2;
}

message SetPermissionsRequest {
    Path path = 1;
    repeated Permissions permissions = 2;
}

message ChangeOwnerRequest {
    Path path = 1;
    string owner = 2 [(yandex.cloud.priv.required) = true];
}

message ListYtDeliveriesRequest {
    string token = 1;
}

message ListYtDeliveriesResponse {
    Ydb.Operations.Operation operation = 1;
}

message YtDelivery {
    string path = 1;
    string destination = 2;
    // 'true' if current user is allowed to add a topic to the delivery
    bool addition_allowed = 3;
}

message ListYtDeliveriesResult {
    repeated YtDelivery deliveries = 1;
}

message AddTopicToYtDeliveryRequest {
    // Topic path
    string topic = 1 [(yandex.cloud.priv.required) = true];
    // Delivery path
    string delivery = 2 [(yandex.cloud.priv.required) = true];
}

message RemoveTopicFromYtDeliveryRequest {
    // Topic path
    string topic = 1 [(yandex.cloud.priv.required) = true];
    // Delivery path
    string delivery = 2 [(yandex.cloud.priv.required) = true];

}
